# r0-grandpa

./: .gitignore  README.md
host/: Cargo.toml  example_metadata.scale
host/src/: client.rs  main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
